--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "gulp-minify-css": "^1.0.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-autoprefixer": "^2.1.0",
-    "gulp-less": "^3.5.0"
+    "gulp-less": "^3.5.0",
+    "gulp-uglify": "^1.1.0"
   },
   "bugs": {
     "url": "https://github.com/eugene-sukhodolskiy/honey/issues"
