--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "author": "Eugene Sukhodolskiy <eugene.sukhodolskiy@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "gulp": "^3.0.0",
-    "gulp-watch": "^4.1.1",
-    "gulp-rigger": "^0.5.8",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-sourcemaps": "^1.5.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-less": "^3.5.0",
-    "gulp-uglify": "^1.1.0"
+    "gulp-minify-css": "^1.0.0",
+    "gulp-rigger": "^0.5.8",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-watch": "^4.1.1"
   },
   "bugs": {
     "url": "https://github.com/eugene-sukhodolskiy/honey/issues"
