--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-file-include": "^2.3.0",
     "gulp-less": "^3.5.0",
     "gulp-minify-css": "^1.0.0",
-    "gulp-rigger": "^0.5.8",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "gulp-watch": "^4.1.1"
